--- a/css/style.css
+++ b/css/style.css
@@ -362,7 +362,7 @@ main{
 }
 .product__image .swiper{
     width: 100%;
-    height: 300px;
+    height: 400px;
 }
 .product__image .swiper .swiper-slide >img{
     width: 100%;
@@ -397,6 +397,12 @@ div[class^="swiper-button"] >i:hover{
     color: var(--neutral-White);
     background-color: var(--primary-Orange);
 }
+@media screen and (min-width:577px) and (max-width:768px){
+    .product__image .swiper{
+    width: 100%;
+    height: fit-content;
+}
+}
 /* ----end-product-image---- */
 /* ---start-product-content---- */
 .product__content{
@@ -419,7 +425,7 @@ div[class^="swiper-button"] >i:hover{
     display: grid;
     gap: 1.25rem;
 }
-.product__content .container .product h1.product__titile{
+.product__content .container .product h1.product__title{
     font-size: 32px;
     color: var(--neutral-Very-dark-blue);
     font-weight: var(--fw-bold);
@@ -526,3 +532,30 @@ div[class^="swiper-button"] >i:hover{
     opacity: 0.5;
 }
 /* ----end-product-content---- */
+/* ----start-media-query---- */
+@media screen and (min-width:769px) and (max-width:992px){
+    .product__image .swiper{
+        width: 100%;
+        height: fit-content;
+    }
+    .product__content .container .product h1.product__title{
+        font-size: 2.9375rem;
+    }
+    .product__content .container .product p.product__description{
+        font-size: 1.1rem;
+        max-width: 600px;
+    }
+    .product__content .container{
+        padding: 1.1rem 2rem;
+    }
+    .product__content .container .product__prix .current__price .product__price{
+        font-size: 2.1rem;
+    }
+    .product__content  .container .Quantity{
+        height: 60px;
+    }
+    .product__content .container button#addToCart{
+        height: 60px;
+    }
+}
+/* ----end-media-query---- */
