--- a/css/style.css
+++ b/css/style.css
@@ -531,6 +531,9 @@ div[class^="swiper-button"] >i:hover{
 .product__content .container button:is(:hover,:focus){
     opacity: 0.5;
 }
+.container__images{
+    display: none ;
+}
 /* ----end-product-content---- */
 /* ----start-media-query---- */
 @media screen and (min-width:769px) and (max-width:992px){
@@ -553,6 +556,71 @@ div[class^="swiper-button"] >i:hover{
     }
     .product__content  .container .Quantity{
         height: 60px;
+    }
+    .product__content .container button#addToCart{
+        height: 60px;
+    }
+}
+@media screen and (min-width:993px) and (max-width:1200px){
+    main{
+        display: flex;
+        padding-top: 4rem;
+        justify-content: space-between;
+        padding-inline: 1rem;
+    }
+    .swiper{
+        display: none !important;
+    }
+    .container__images{
+        width: 100%;
+        padding: 1rem;
+        display: flex;
+        align-items: flex-start;
+        justify-content: space-between;
+        flex-direction: column;
+        gap: 30px;
+    }
+    .image__principal{
+        max-width: 500px;
+        width: 400px;
+        object-fit: cover;
+        object-position: center;
+    }
+    .image__principal img{
+        width: 100%;
+        height: 100%;
+        border-radius: 10px;
+        -webkit-border-radius: 10px;
+        -moz-border-radius: 10px;
+        -ms-border-radius: 10px;
+        -o-border-radius: 10px;
+}
+    .images__secondary{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        max-width: 500px;
+        width: 400px;
+        gap: 20px;
+    }
+    .images__secondary img{
+        width: 76px;
+        border-radius: 10px;
+        -webkit-border-radius: 10px;
+        -moz-border-radius: 10px;
+        -ms-border-radius: 10px;
+        -o-border-radius: 10px;
+        max-width: 90px;
+}
+    .images__secondary img:hover{
+        border: 2px solid var(--primary-Orange);
+        opacity: 0.4;
+    }
+    .product__content .container .product h1.product__title{
+        font-size: 2.5rem;
+    }
+    .product__content .container .product p.product__description{
+        font-size: 1.1rem;
     }
     .product__content .container button#addToCart{
         height: 60px;
