--- a/css/style.css
+++ b/css/style.css
@@ -506,6 +506,11 @@ div[class^="swiper-button"] >i:hover{
 .product__content .container .Quantity img:is(:hover,:focus){
     opacity: 0.5;
 }
+.product__content .container .button_with_quantity{
+    display: flex;
+    gap: 30px;
+    flex-direction: column;
+}
 .product__content .container button#addToCart{
     cursor: pointer;
     text-decoration: none;
@@ -514,6 +519,7 @@ div[class^="swiper-button"] >i:hover{
     justify-content: center;
     align-items: center;
     border: 0;
+    width: 100%;
     border-radius: 0.5rem;
     padding: 0.79em 1.5em;
     background-color: var(--primary-Orange);
@@ -535,6 +541,10 @@ div[class^="swiper-button"] >i:hover{
     display: none ;
 }
 /* ----end-product-content---- */
+/* ---start-modal---- */
+.modal{
+    display: none;
+}
 /* ----start-media-query---- */
 @media screen and (min-width:769px) and (max-width:992px){
     .product__image .swiper{
@@ -620,19 +630,24 @@ div[class^="swiper-button"] >i:hover{
     }
     .product__content .container .product h1.product__title{
         font-size: 2.5rem;
+        max-width: 495px;
     }
     .product__content .container .product p.product__description{
         font-size: 1.1rem;
+        
     }
     .product__content .container button#addToCart{
         height: 60px;
     }
     .modal{
+        display: none;
+    }
+    .modal.active{
         width: 100%;
         background-color: rgba(0,0,0,0.5);
         position: fixed;
         inset: 0;
-        display: flex;
+        display: flex !important;
         align-items: center;
         justify-content: center;
     }
@@ -646,14 +661,407 @@ div[class^="swiper-button"] >i:hover{
     .modal .image__container{
         width: 50%;
         height: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        gap: 0.625rem;
     }
-    .modal .image__container img{
+    .modal .image__container #primary_img_model{
         border-radius: 15px;
         -webkit-border-radius: 15px;
         -moz-border-radius: 15px;
         -ms-border-radius: 15px;
         -o-border-radius: 15px;
     }
+    .modal .image__container .btn_hide{
+        background-color: transparent;
+        border: none;
+        color: var(--neutral-White);
+        font-size: 1.4rem;
+        transition:  .3s all ease;
+        -webkit-transition:  .3s all ease;
+        -moz-transition:  .3s all ease;
+        -ms-transition:  .3s all ease;
+        -o-transition:  .3s all ease;
+        align-self: flex-end;
+        
+    }
+    .modal .image__container .btn_hide:hover {
+        color: var(--primary-Orange);
+    }
+
+    .modal .icon__container{
+        width: 40px;
+        height: 40px;
+        display: flex;
+        align-items: center;
+        justify-self: center;
+    }
+    .modal .icon__container button{
+        width: 40px;
+        height: 40px;
+        background-color: var(--neutral-White);
+        border: none;
+        border-radius: 50%;
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
+        -ms-border-radius: 50%;
+        -o-border-radius: 50%;
+        color: var(--neutral-Very-dark-blue);
+        font-size: 1.2rem;
+        transition: all .3s ease-in-out ;
+        -webkit-transition: all .3s ease-in-out ;
+        -moz-transition: all .3s ease-in-out ;
+        -ms-transition: all .3s ease-in-out ;
+        -o-transition: all .3s ease-in-out ;
+        cursor: pointer;
+}
+    .modal .icon__container button:hover{
+        background-color: var(--primary-Orange);
+        color: var(--neutral-White);
+    }
+
+}
+@media screen and (min-width:1201px) and (max-width:1400px){
+    header{
+        padding-inline: 4rem;
+    }
+    main{
+        display: flex;
+        padding-block: 4rem;
+        justify-content: space-between;
+        padding-inline: 4rem;
+        height: auto;
+    }
+    .swiper{
+        display: none !important;
+    }
+    .container__images{
+        width: 100%;
+        padding: 1rem;
+        display: flex;
+        align-items: flex-start;
+        justify-content: space-between;
+        flex-direction: column;
+        gap: 30px;
+    }
+    .image__principal{
+        max-width: 600px;
+        width: 500px;
+        object-fit: cover;
+        object-position: center;
+    }
+    .image__principal img{
+        width: 100%;
+        height: 100%;
+        border-radius: 10px;
+        -webkit-border-radius: 10px;
+        -moz-border-radius: 10px;
+        -ms-border-radius: 10px;
+        -o-border-radius: 10px;
+        cursor: pointer;
+}
+    .images__secondary{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        max-width: 500px;
+        width: 400px;
+        gap: 40px;
+    }
+    .images__secondary img{
+        width: 120px;
+        border-radius: 10px;
+        -webkit-border-radius: 10px;
+        -moz-border-radius: 10px;
+        -ms-border-radius: 10px;
+        -o-border-radius: 10px;
+        max-width: 100px;
+        cursor: pointer;
+}
+    .images__secondary img:hover{
+        border: 2px solid var(--primary-Orange);
+        opacity: 0.4;
+    }
+    .product__content{
+        height: fit-content;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 1rem;
+    }
+    .product__content .product__prix{
+        display: flex;
+        flex-direction: column;
+    }
+    .product__content .product__prix .current__price,
+    .product__content .product__prix .original__price{
+        align-self: flex-start;
+    }
+    .product__content  .button_with_quantity{
+        display: flex;
+        gap: 20px;
+        flex-direction: row !important;
+    }
+    .product__content .button_with_quantity .Quantity{
+        width: 200px;
+    }
+    .product__content .button_with_quantity button{
+        width: 300px;
+        max-width: 350px;
+    }
+    .product__content .container .product h1.product__title{
+        font-size: 2.5rem;
+        max-width: 495px;
+    }
+    .product__content .container .product p.product__description{
+        font-size: 1.1rem;
+        
+    }
+    .product__content .container button#addToCart{
+        height: 60px;
+    }
+    .modal{
+        display: none;
+    }
+    .modal.active{
+        width: 100%;
+        background-color: rgba(0,0,0,0.5);
+        position: fixed;
+        inset: 0;
+        display: flex !important;
+        align-items: center;
+        justify-content: center;
+    }
+    .modal .container{
+        max-width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 2.5rem;
+    }
+    .modal .image__container{
+        width: 50%;
+        height: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        gap: 0.625rem;
+    }
+    .modal .image__container #primary_img_model{
+        border-radius: 15px;
+        -webkit-border-radius: 15px;
+        -moz-border-radius: 15px;
+        -ms-border-radius: 15px;
+        -o-border-radius: 15px;
+    }
+    .modal .image__container .btn_hide{
+        background-color: transparent;
+        border: none;
+        color: var(--neutral-White);
+        font-size: 1.4rem;
+        transition:  .3s all ease;
+        -webkit-transition:  .3s all ease;
+        -moz-transition:  .3s all ease;
+        -ms-transition:  .3s all ease;
+        -o-transition:  .3s all ease;
+        align-self: flex-end;
+        
+    }
+    .modal .image__container .btn_hide:hover {
+        color: var(--primary-Orange);
+    }
+
+    .modal .icon__container{
+        width: 40px;
+        height: 40px;
+        display: flex;
+        align-items: center;
+        justify-self: center;
+    }
+    .modal .icon__container button{
+        width: 40px;
+        height: 40px;
+        background-color: var(--neutral-White);
+        border: none;
+        border-radius: 50%;
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
+        -ms-border-radius: 50%;
+        -o-border-radius: 50%;
+        color: var(--neutral-Very-dark-blue);
+        font-size: 1.2rem;
+        transition: all .3s ease-in-out ;
+        -webkit-transition: all .3s ease-in-out ;
+        -moz-transition: all .3s ease-in-out ;
+        -ms-transition: all .3s ease-in-out ;
+        -o-transition: all .3s ease-in-out ;
+        cursor: pointer;
+}
+    .modal .icon__container button:hover{
+        background-color: var(--primary-Orange);
+        color: var(--neutral-White);
+    }
+
+}
+@media screen and (min-width:1401px){
+
+    header{
+        padding-inline: 4rem;
+        max-width: 1440px;
+        margin: 0 auto;
+    }
+    main{
+        display: flex;
+        padding-block: 4rem;
+        justify-content: space-between;
+        padding-inline: 4rem;
+        height: auto;
+        max-width: 1440px;
+        margin: 0 auto;
+    }
+    .swiper{
+        display: none !important;
+    }
+    .container__images{
+        width: 100%;
+        padding: 1rem;
+        display: flex;
+        align-items: flex-start;
+        justify-content: space-between;
+        flex-direction: column;
+        gap: 30px;
+    }
+    .image__principal{
+        max-width: 600px;
+        width: 500px;
+        object-fit: cover;
+        object-position: center;
+    }
+    .image__principal img{
+        width: 100%;
+        height: 100%;
+        border-radius: 10px;
+        -webkit-border-radius: 10px;
+        -moz-border-radius: 10px;
+        -ms-border-radius: 10px;
+        -o-border-radius: 10px;
+        cursor: pointer;
+}
+    .images__secondary{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        max-width: 500px;
+        width: 400px;
+        gap: 40px;
+    }
+    .images__secondary img{
+        width: 120px;
+        border-radius: 10px;
+        -webkit-border-radius: 10px;
+        -moz-border-radius: 10px;
+        -ms-border-radius: 10px;
+        -o-border-radius: 10px;
+        max-width: 100px;
+        cursor: pointer;
+}
+    .images__secondary img:hover{
+        border: 2px solid var(--primary-Orange);
+        opacity: 0.4;
+    }
+    .product__content{
+        height: fit-content;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 1rem;
+    }
+    .product__content .product__prix{
+        display: flex;
+        flex-direction: column;
+    }
+    .product__content .product__prix .current__price,
+    .product__content .product__prix .original__price{
+        align-self: flex-start;
+    }
+    .product__content  .button_with_quantity{
+        display: flex;
+        gap: 20px;
+        flex-direction: row !important;
+    }
+    .product__content .button_with_quantity .Quantity{
+        width: 200px;
+    }
+    .product__content .button_with_quantity button{
+        width: 300px;
+        max-width: 350px;
+    }
+    .product__content .container .product h1.product__title{
+        font-size: 2.5rem;
+        max-width: 495px;
+    }
+    .product__content .container .product p.product__description{
+        font-size: 1.1rem;
+        
+    }
+    .product__content .container button#addToCart{
+        height: 60px;
+    }
+    .modal{
+        display: none;
+    }
+    .modal.active{
+        width: 100%;
+        background-color: rgba(0,0,0,0.5);
+        position: fixed;
+        inset: 0;
+        display: flex !important;
+        align-items: center;
+        justify-content: center;
+    }
+    .modal .container{
+        max-width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 2.5rem;
+    }
+    .modal .image__container{
+        width: 50%;
+        height: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        gap: 0.625rem;
+    }
+    .modal .image__container #primary_img_model{
+        border-radius: 15px;
+        -webkit-border-radius: 15px;
+        -moz-border-radius: 15px;
+        -ms-border-radius: 15px;
+        -o-border-radius: 15px;
+    }
+    .modal .image__container .btn_hide{
+        background-color: transparent;
+        border: none;
+        color: var(--neutral-White);
+        font-size: 1.4rem;
+        transition:  .3s all ease;
+        -webkit-transition:  .3s all ease;
+        -moz-transition:  .3s all ease;
+        -ms-transition:  .3s all ease;
+        -o-transition:  .3s all ease;
+        align-self: flex-end;
+        
+    }
+    .modal .image__container .btn_hide:hover {
+        color: var(--primary-Orange);
+    }
+
     .modal .icon__container{
         width: 40px;
         height: 40px;
